[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/BG.png" type="Texture" id=1]
[ext_resource path="res://sprites/board_S.png" type="Texture" id=2]
[ext_resource path="res://Inventory.gd" type="Script" id=3]
[ext_resource path="res://ToolboardGrid.gd" type="Script" id=4]
[ext_resource path="res://saveBtn.gd" type="Script" id=5]
[ext_resource path="res://sprites/list_3D00054.png" type="Texture" id=6]
[ext_resource path="res://sprites/list_3D00055.png" type="Texture" id=7]
[ext_resource path="res://sprites/list_3D00057.png" type="Texture" id=8]
[ext_resource path="res://sprites/list_3D00056.png" type="Texture" id=9]
[ext_resource path="res://sprites/list_3D00058.png" type="Texture" id=10]
[ext_resource path="res://sprites/list_3D00059.png" type="Texture" id=11]
[ext_resource path="res://sprites/list_3D00060.png" type="Texture" id=12]
[ext_resource path="res://sprites/list_3D00061.png" type="Texture" id=13]
[ext_resource path="res://sprites/list_3D00062.png" type="Texture" id=14]
[ext_resource path="res://sprites/list_3D00064.png" type="Texture" id=15]
[ext_resource path="res://sprites/list_3D00065.png" type="Texture" id=16]
[ext_resource path="res://sprites/list_3D00063.png" type="Texture" id=17]
[ext_resource path="res://sprites/list_3D00091.png" type="Texture" id=18]
[ext_resource path="res://sprites/list_3D00090.png" type="Texture" id=19]
[ext_resource path="res://sprites/list_3D00089.png" type="Texture" id=20]

[node name="Inventory" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="InventoryBase" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="ToolboardGrid" type="TextureRect" parent="."]
margin_left = 95.0
margin_top = 136.0
margin_right = 571.0
margin_bottom = 614.0
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_right = 681.0
margin_bottom = 54.0
text = "  ATECH TOOLBOARD CUSTOMIZER GUI (V0.7)"
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 682.0
margin_right = 1042.0
margin_bottom = 53.0
text = "  OPHÃ†NGSLISTE"
valign = 1

[node name="saveBtn" type="Button" parent="."]
margin_left = 841.0
margin_top = 9.0
margin_right = 910.0
margin_bottom = 46.0
text = "KURV"
script = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 683.0
margin_top = 59.0
margin_right = 1042.0
margin_bottom = 708.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 359.0
margin_bottom = 645.0
custom_constants/separation = 0

[node name="listItem1" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_right = 359.0
margin_bottom = 43.0
texture = ExtResource( 6 )

[node name="listItem2" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 359.0
margin_bottom = 86.0
texture = ExtResource( 7 )

[node name="listItem3" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 359.0
margin_bottom = 129.0
texture = ExtResource( 9 )

[node name="listItem4" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 359.0
margin_bottom = 172.0
texture = ExtResource( 8 )

[node name="listItem5" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 359.0
margin_bottom = 215.0
texture = ExtResource( 10 )

[node name="listItem6" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 359.0
margin_bottom = 258.0
texture = ExtResource( 11 )

[node name="listItem7" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 359.0
margin_bottom = 301.0
texture = ExtResource( 12 )

[node name="listItem8" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 301.0
margin_right = 359.0
margin_bottom = 344.0
texture = ExtResource( 13 )

[node name="listItem9" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 359.0
margin_bottom = 387.0
texture = ExtResource( 14 )

[node name="listItem10" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 387.0
margin_right = 359.0
margin_bottom = 430.0
texture = ExtResource( 17 )

[node name="listItem11" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 359.0
margin_bottom = 473.0
texture = ExtResource( 15 )

[node name="listItem12" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 473.0
margin_right = 359.0
margin_bottom = 516.0
texture = ExtResource( 16 )

[node name="listItem13" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 516.0
margin_right = 359.0
margin_bottom = 559.0
texture = ExtResource( 20 )

[node name="listItem14" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 559.0
margin_right = 359.0
margin_bottom = 602.0
texture = ExtResource( 19 )

[node name="listItem15" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
margin_top = 602.0
margin_right = 359.0
margin_bottom = 645.0
texture = ExtResource( 18 )
